--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -22,7 +22,7 @@
 </head>
 <footer class="ft">
   <div class="ft_wrap">
-      <div class="ft_logo"><img src="./img/lg_logo2.png" alt="하단로고" width=144px; height=26.04px; ></div>
+      <div class="ft_logo"><img src="/img/lg_logo2.png" alt="하단로고" width=144px; height=26.04px; ></div>
       <div class="mid_box">
           <nav class="fnb">
               <a href="" class="dpc">개인정보 처리 방침</a>
