--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,62 +2,62 @@
 <html lang="ko" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
   xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>메인 페이지</title>
-  <th:block th:include="common/head" />
-  <style>
-  /* content */
-  .page { clear:both; width: 100%; }
-  .page_wrap { width: 1200px; margin: 0 auto; }
-  #page1, #page3 { background-color:#ececec; }
-  .page_tit { text-align: center; font-size:32px; padding-top:1.2em; padding-bottom: 0.8em; }
-  .lst { clear:both; width: 1200px; }
-  .lst:after { content:""; display:block; clear: both;}
-  .lst li { margin-bottom: 40px; }
-  .lst li.left { float:left; width: 816px; height: 459px;}
-  .lst li.right { float:right; width:350px; height: 459px; }
-  .ico_lst { clear:both; width: 100%; overflow:hidden; }
-  .ico_lst li a { display:block; background-repeat: no-repeat; background-position:0px center; background-size:auto 80%; padding-left: 55px; }
-  .cate_tit { color:#222; font-size:20px; padding-bottom: 0.5em; }
-  .cate_com { color:#222; font-size:14px; overflow:hidden; white-space:nowrap; text-overflow:ellipsis; }
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>메인 페이지</title>
+<th:block th:include="common/head" />
+<style>
+/* content */
+.page { clear:both; width: 100%; }
+.page_wrap { width: 1200px; margin: 0 auto; }
+#page1, #page3 { background-color:#ececec; }
+.page_tit { text-align: center; font-size:32px; padding-top:1.2em; padding-bottom: 0.8em; }
+.lst { clear:both; width: 1200px; }
+.lst:after { content:""; display:block; clear: both;}
+.lst li { margin-bottom: 40px; }
+.lst li.left { float:left; width: 416px; height: 459px; margin-top: 170px; margin-left: 100px;}
+.lst li.right { float:right; width:350px; height: 459px; margin-top: 170px; margin-right: 200px;}
+.ico_lst { clear:both; width: 100%; overflow:hidden; }
+.ico_lst li a { display:block; background-repeat: no-repeat; background-position:0px center; background-size:auto 80%; padding-left: 55px; }
+.cate_tit { color:#222; font-size:20px; padding-bottom: 0.5em; }
+.cate_com { color:#222; font-size:14px; overflow:hidden; white-space:nowrap; text-overflow:ellipsis; }
 
-  #page2 { background-color: rgba(230, 248, 255, 0.5); }
-  .pic_lst { clear:both; width: 100%; padding-bottom: 80px; }
-  .pic_lst:after { content:""; display:block; clear:both; }
-  .pic_lst li { float:left; position:relative; margin-bottom: 40px; }
-  .pic_lst li a { display:block; width: 360px; margin-right: 40px;overflow: hidden; height: 300px; }
-  .pic_lst li a img { display:block; width:600px; margin-left: -120px; transition-duration:0.8s; }
-  .pic_lst li a:hover img { margin-left: 0; }
-  .pic_lst li a .hv_box { width: 360px; height: 300px; color:#fff; opacity:0; position:absolute; top:0; left: 0;
-                              z-index:10; transition-duration:0.8s; background-color:transparent; }
-  .pic_lst li a:hover .hv_box { opacity:1; }
-  .pic_tit { position:absolute; top:30px; left: 30px; text-shadow:0px 0px 3px red; }
-  .pic_com { position:absolute; right:30px; bottom:30px; text-shadow:0px 0px 3px blue; }
+#page2 { background-color: rgba(230, 248, 255, 0.5); }
+.pic_lst { clear:both; width: 100%; padding-bottom: 80px; }
+.pic_lst:after { content:""; display:block; clear:both; }
+.pic_lst li { float:left; position:relative; margin-bottom: 40px; }
+.pic_lst li a { display:block; width: 360px; margin-right: 40px;overflow: hidden; height: 300px; }
+.pic_lst li a img { display:block; width:600px; margin-left: -120px; transition-duration:0.8s; }
+.pic_lst li a:hover img { margin-left: 0; }
+.pic_lst li a .hv_box { width: 360px; height: 300px; color:#fff; opacity:0; position:absolute; top:0; left: 0;
+                            z-index:10; transition-duration:0.8s; background-color:transparent; }
+.pic_lst li a:hover .hv_box { opacity:1; }
+.pic_tit { position:absolute; top:30px; left: 30px; text-shadow:0px 0px 3px red; }
+.pic_com { position:absolute; right:30px; bottom:30px; text-shadow:0px 0px 3px blue; }
 
-  #page3 { background-repeat: no-repeat; background-size: cover; background-position:center center; height: 100vh; 
-              background-image:url("./img/bg_partners.jpg"); overflow:hidden; }
-  #page3 .page_wrap { width: 100%; }
-  .circle_lst { clear:both; width: 4455px; }
-  .circle_lst li { width: 200px; height: 200px; position:relative; border-radius:120px; overflow:hidden; background-color: #fff; float:left; margin:28px;  }
-  .circle_lst.lst2 li { float:right; }
-  .circle_lst li a { display:block; width: 100%; height: 100%; }
-  .circle_lst li a img { display:block; width:160px; height:auto; position:absolute; top:50%; left: 20px; z-index:11; margin-top: -28px; }  
-  </style>
-  <script>
-    $(document).ready(function(){
-        $("<ul class='circle_lst lst2'></ul>").insertAfter($(".circle_lst"));
-        $lst1_obj = $(".circle_lst li").clone();
-        $(".circle_lst.lst2").append($lst1_obj);
-    });    
+#page3 { background-repeat: no-repeat; background-size: cover; background-position:center center; height: 100vh; 
+            background-image:url("/img/bg_partners.jpg"); overflow:hidden; }
+#page3 .page_wrap { width: 100%; }
+.circle_lst { clear:both; width: 4455px; }
+.circle_lst li { width: 200px; height: 200px; position:relative; border-radius:120px; overflow:hidden; background-color: #fff; float:left; margin:28px;  }
+.circle_lst.lst2 li { float:right; }
+.circle_lst li a { display:block; width: 100%; height: 100%; }
+.circle_lst li a img { display:block; width:160px; height:auto; position:absolute; top:50%; left: 20px; z-index:11; margin-top: -28px; }  
+</style>
+<script>
+$(document).ready(function(){
+    $("<ul class='circle_lst lst2'></ul>").insertAfter($(".circle_lst"));
+    $lst1_obj = $(".circle_lst li").clone();
+    $(".circle_lst.lst2").append($lst1_obj);
+});    
 </script>
 </head>
 <body>
   <div class="wrap">
     <th:block th:include="common/header" />
     <div class="content">
-      <figure class="vs">
+      <figure class="vs3">
         <video src="./video/mainv.mp4" class="vdo" autoplay muted loop></video>
       </figure>
       <section class="page" id="page1">
@@ -101,7 +101,7 @@
           <ul class="pic_lst">
             <li>
               <a href="">
-                <img src="./img/features1.jpg" alt="세계 최대 가전 박람회" class="pic">
+                <img src="/img/features1.jpg" alt="세계 최대 가전 박람회" class="pic">
                 <div class="hv_box">
                   <h3 class="pic_tit">세계 최대 가전 박람회</h3>
                   <p class="pic_com">IFA 2022 속 LG디스플레이</p>
@@ -110,7 +110,7 @@
             </li>
             <li>
               <a href="">
-                <img src="./img/features2.jpg" alt="OLED로 만들어낸 미래도시" class="pic">
+                <img src="/img/features2.jpg" alt="OLED로 만들어낸 미래도시" class="pic">
                 <div class="hv_box">
                   <h3 class="pic_tit">OLED로 만들어낸 미래도시</h3>
                   <p class="pic_com">K-Display 2022에서 펼쳐지다</p>
@@ -119,7 +119,7 @@
             </li>
             <li>
               <a href="">
-                <img src="./img/features3.jpg" alt="OLED Shelf, 2022 레드닷 디자인 어워드 디자인 컨셉 부문 Winner 수상"
+                <img src="/img/features3.jpg" alt="OLED Shelf, 2022 레드닷 디자인 어워드 디자인 컨셉 부문 Winner 수상"
                   class="pic">
                 <div class="hv_box">
                   <h3 class="pic_tit">OLED Shelf, 2022 레드닷 디자인 어워드 디자인 컨셉 부문 Winner 수상</h3>
@@ -129,7 +129,7 @@
             </li>
             <li>
               <a href="">
-                <img src="./img/features4.jpg" alt="제 2회 OLEDs Go!" class="pic">
+                <img src="/img/features4.jpg" alt="제 2회 OLEDs Go!" class="pic">
                 <div class="hv_box">
                   <h3 class="pic_tit">제 2회 OLEDs Go!</h3>
                   <p class="pic_com">공모전 수상작 발표 1위 수상작 케일럼</p>
@@ -138,7 +138,7 @@
             </li>
             <li>
               <a href="">
-                <img src="./img/features5.jpg" alt="투명 OLED로 변화하는 오피스 인테리어" class="pic">
+                <img src="/img/features5.jpg" alt="투명 OLED로 변화하는 오피스 인테리어" class="pic">
                 <div class="hv_box">
                   <h3 class="pic_tit">투명 OLED로 변화하는 오피스 인테리어</h3>
                   <p class="pic_com">디지털 환경과 실제 공간이 만나다</p>
@@ -147,7 +147,7 @@
             </li>
             <li>
               <a href="">
-                <img src="./img/features6.jpg" alt="미래형 매장의 시작" class="pic">
+                <img src="/img/features6.jpg" alt="미래형 매장의 시작" class="pic">
                 <div class="hv_box">
                   <h3 class="pic_tit">미래형 매장의 시작</h3>
                   <p class="pic_com">‘랩(Lab) 오브 파리바게뜨’</p>
@@ -156,7 +156,7 @@
             </li>
             <li>
               <a href="">
-                <img src="./img/features7.jpg" alt="2022 구겐하임 YCC 파티" class="pic">
+                <img src="/img/features7.jpg" alt="2022 구겐하임 YCC 파티" class="pic">
                 <div class="hv_box">
                   <h3 class="pic_tit">2022 구겐하임 YCC 파티</h3>
                   <p class="pic_com">투명 OLED로 더 빛이 난 그 현장 속으로</p>
@@ -165,7 +165,7 @@
             </li>
             <li>
               <a href="">
-                <img src="./img/features8.jpg" alt="SBS 방송에서 만난 OLED" class="pic">
+                <img src="/img/features8.jpg" alt="SBS 방송에서 만난 OLED" class="pic">
                 <div class="hv_box">
                   <h3 class="pic_tit">SBS 방송에서 만난 OLED</h3>
                   <p class="pic_com">디스플레이의 미래를 엿보다</p>
@@ -174,7 +174,7 @@
             </li>
             <li>
               <a href="">
-                <img src="./img/features9.jpg" alt="SID 2022 : 끊임없이 진화하는 OLED의 신기술" class="pic">
+                <img src="/img/features9.jpg" alt="SID 2022 : 끊임없이 진화하는 OLED의 신기술" class="pic">
                 <div class="hv_box">
                   <h3 class="pic_tit">SID 2022 : 끊임없이 진화하는 OLED의 신기술</h3>
                   <p class="pic_com">새로운 미래를 열다</p>
@@ -187,25 +187,25 @@
     </div>
     <section class="page" id="page3">
       <div class="page_wrap">
-        <h2 class="page_tit"><img src="./img/lg_partner.png" width="" alt=""></h2>
+        <h2 class="page_tit"><img src="/img/lg_partner.png" width="" alt=""></h2>
         <ul class="circle_lst lst1">
-          <li><a href=""><img src="./img/page3_1.png" alt="파트너스01" class="thumb"></a></li>
-          <li><a href=""><img src="./img/page3_2.png" alt="파트너스02" class="thumb"></a></li>
-          <li><a href=""><img src="./img/page3_3.png" alt="파트너스03" class="thumb"></a></li>
-          <li><a href=""><img src="./img/page3_4.png" alt="파트너스04" class="thumb"></a></li>
-          <li><a href=""><img src="./img/page3_5.png" alt="파트너스05" class="thumb"></a></li>
-          <li><a href=""><img src="./img/page3_6.png" alt="파트너스06" class="thumb"></a></li>
-          <li><a href=""><img src="./img/page3_7.png" alt="파트너스07" class="thumb"></a></li>
-          <li><a href=""><img src="./img/page3_8.png" alt="파트너스08" class="thumb"></a></li>
-          <li><a href=""><img src="./img/page3_9.png" alt="파트너스09" class="thumb"></a></li>
-          <li><a href=""><img src="./img/page3_10.png" alt="파트너스10" class="thumb"></a></li>
-          <li><a href=""><img src="./img/page3_11.png" alt="파트너스11" class="thumb"></a></li>
-          <li><a href=""><img src="./img/page3_12.png" alt="파트너스12" class="thumb"></a></li>
-          <li><a href=""><img src="./img/page3_13.png" alt="파트너스13" class="thumb"></a></li>
-          <li><a href=""><img src="./img/page3_14.png" alt="파트너스14" class="thumb"></a></li>
-          <li><a href=""><img src="./img/page3_15.png" alt="파트너스15" class="thumb"></a></li>
-          <li><a href=""><img src="./img/page3_16.png" alt="파트너스16" class="thumb"></a></li>
-          <li><a href=""><img src="./img/page3_17.png" alt="파트너스17" class="thumb"></a></li>
+          <li><a href=""><img src="/img/page3_1.png" alt="파트너스01" class="thumb"></a></li>
+          <li><a href=""><img src="/img/page3_2.png" alt="파트너스02" class="thumb"></a></li>
+          <li><a href=""><img src="/img/page3_3.png" alt="파트너스03" class="thumb"></a></li>
+          <li><a href=""><img src="/img/page3_4.png" alt="파트너스04" class="thumb"></a></li>
+          <li><a href=""><img src="/img/page3_5.png" alt="파트너스05" class="thumb"></a></li>
+          <li><a href=""><img src="/img/page3_6.png" alt="파트너스06" class="thumb"></a></li>
+          <li><a href=""><img src="/img/page3_17.png" alt="파트너스07" class="thumb"></a></li>
+          <li><a href=""><img src="/img/page3_8.png" alt="파트너스08" class="thumb"></a></li>
+          <li><a href=""><img src="/img/page3_9.png" alt="파트너스09" class="thumb"></a></li>
+          <li><a href=""><img src="/img/page3_10.png" alt="파트너스10" class="thumb"></a></li>
+          <li><a href=""><img src="/img/page3_1.png" alt="파트너스11" class="thumb"></a></li>
+          <li><a href=""><img src="/img/page3_12.png" alt="파트너스12" class="thumb"></a></li>
+          <li><a href=""><img src="/img/page3_13.png" alt="파트너스13" class="thumb"></a></li>
+          <li><a href=""><img src="/img/page3_14.png" alt="파트너스14" class="thumb"></a></li>
+          <li><a href=""><img src="/img/page3_15.png" alt="파트너스15" class="thumb"></a></li>
+          <li><a href=""><img src="/img/page3_16.png" alt="파트너스16" class="thumb"></a></li>
+          <li><a href=""><img src="/img/page3_17.png" alt="파트너스17" class="thumb"></a></li>
         </ul>
       </div>
     </section>
