--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -12,9 +12,8 @@
 .tnb { float:right; margin: 30px 0px; }
 .tnb a { padding: 1.5em; font-size:12px; color: deepskyblue; }
 .tnb a:hover { color:red; font-weight:700; text-decoration: underline; text-decoration-style:dotted; }
-/* 방법1 : logo/tnb/gnb 한 줄로 배치 */
-/* .gnb { float:left;  width: 704px; margin-left: 50px; margin-top: 16px; } */
-/* 방법2 : gnb만 밑으로 내릴 경우 */
+
+
 .gnb { clear:both; width: 100%; }
 /* clear-fix 처리 */
 .gnb:after { content:""; display:block; clear:both; } 
@@ -28,58 +27,63 @@
 .gnb li .sub li a { background-color:#333; color:#fff; font-size:14px; display:block; text-indent:2em; overflow: hidden; white-space:nowrap; text-overflow: ellipsis; }
 .gnb li .sub li:hover a { color:red; }
 .content { clear: both; width: 100%; }
-.vs { clear:both; width: 100%; height:100vh; overflow:hidden; }
+.vs3 { clear:both; width: 100%; height:100vh; overflow:hidden; }
 .vdo { display:block; width:100%; height:auto; }
 </style>
 </head>
 <header class="hd">
   <div class="hd_wrap">
-      <a href="index.html" class="logo"><img src="./img/lg_logo2.png" alt=""></a>
-      <nav class="tnb">
-          <a href="login.html">로그인</a>
-          <a href="join.html">회원가입</a>
-          <a href="boardList.html">게시판</a>
-          <a href="sitemap.html"><img src="./img/sitemap3.png" width="25" alt=""></a>
+      <a href="/" class="logo"><img src="/img/lg_logo2.png" alt=""></a>
+      <nav th:if="${sid == ''}" class="tnb">
+        <a th:href="@{/custom/loginForm.do}" >로그인</a>
+        <a th:href="@{/custom/agree.do }">회원가입</a>
+        <a th:href="@{/board/boardList.do }">게시판</a>
+        <a th:href="@{/sub/sitemap.do}">사이트맵</a>
+    </nav>
+      <nav th:if="${sid != ''}" class="tnb">
+          
+          <a th:href="@{/board/boardList.do }">게시판</a>
+          <a th:href="@{/sub/sitemap.do}">사이트맵</a>
       </nav>
       <nav class="gnb">
           <ul style="opacity: 0.85;">
               <li class="item1">
-                  <a href="product.html#page1" class="dp1">제품</a>
+                  <a href="/sub/product.do#page1" class="dp1">제품</a>
                   <ul class="sub">
-                      <li><a href="product.html#page1">TV</a></li>
-                      <li><a href="product.html#page2">IT</a></li>
-                      <li><a href="product.html#page3">Mobile</a></li>
+                      <li><a href="/sub/product.do#page1">TV</a></li>
+                      <li><a href="/sub/product.do#page2">IT</a></li>
+                      <li><a href="/sub/product.do#page3">Mobile</a></li>
                   </ul>
               </li>
               <li class="item2">
-                  <a href="technology.html#page1" class="dp1">기술</a>
+                  <a href="/sub/technology.do#page1" class="dp1">기술</a>
                   <ul class="sub">
-                      <li><a href="technology.html#page1">OLED</a></li>
-                      <li><a href="technology.html#page2">LCD</a></li>
+                      <li><a href="/sub/technology.do#page1">OLED</a></li>
+                      <li><a href="/sub/technology.do#page2">LCD</a></li>
                   </ul>
               </li>
               <li class="item3">
-                  <a href="esg.html#page1" class="dp1">ESG</a>
+                  <a href="/sub/esg.do#page1" class="dp1">ESG</a>
                   <ul class="sub">
-                      <li><a href="esg.html#page1">환경</a></li>
-                      <li><a href="esg.html#page2">사회</a></li>
-                      <li><a href="esg.html#page3">지배구조</a></li>
+                      <li><a href="/sub/esg.do#page1">환경</a></li>
+                      <li><a href="/sub/esg.do#page2">사회</a></li>
+                      <li><a href="/sub/esg.do#page3">지배구조</a></li>
                   </ul>
               </li>
               <li class="item4">
-                  <a href="company.html#page1" class="dp1">기업정보</a>
+                  <a href="/sub/company.do#page1" class="dp1">기업정보</a>
                   <ul class="sub">
-                      <li><a href="company.html#page1">기업개요</a></li>
-                      <li><a href="company.html#page2">연혁</a></li>
-                      <li><a href="company.html#page3">사업장 위치</a></li>
+                      <li><a href="/sub/company.do#page1">기업개요</a></li>
+                      <li><a href="/sub/company.do#page2">연혁</a></li>
+                      <li><a href="/sub/company.do#page3">사업장 위치</a></li>
                   </ul>
               </li>
               <li class="item5">
-                  <a href="invest.html#page1" class="dp1">투자정보</a>
+                  <a href="/sub/invest.do#page1" class="dp1">투자정보</a>
                   <ul class="sub">
-                      <li><a href="invest.html#page1">재무정보</a></li>
-                      <li><a href="invest.html#page2">주주총회</a></li>
-                      <li><a href="invest.html#page3">공시정보</a></li>
+                      <li><a href="/sub/invest.do#page1">재무정보</a></li>
+                      <li><a href="/sub/invest.do#page2">주주총회</a></li>
+                      <li><a href="/sub/invest.do#page3">공시정보</a></li>
                   </ul>
               </li>
           </ul>
