--- a/src/main/resources/templates/custom/loginForm.html
+++ b/src/main/resources/templates/custom/loginForm.html
@@ -4,77 +4,200 @@
 
 <head>
   <title>로그인 페이지</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <th:block th:include="common/head"></th:block>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: white;
-      height: 100vh;
+    /* header.css */
+    .hd {
+      position: fixed;
     }
 
-    #login .container #login-row #login-column #login-box {
-      margin-top: 120px;
-      max-width: 600px;
-      height: 320px;
-      background-color: white;
+    /* content */
+    .vs {
+      clear: both;
+      width: 100%;
+      height: 300px;
+      overflow: hidden;
     }
 
-    #login .container #login-row #login-column #login-box #login-form {
-      padding: 20px;
+    .vs img {
+      display: block;
+      width: 100%;
+      height: auto;
     }
 
-    #login .container #login-row #login-column #login-box #login-form #register-link {
-      margin-top: -85px;
+    .bread {
+      clear: both;
+      width: 100%;
+      line-height: 60px;
+      border-bottom: 3px solid #eee;
+    }
+
+    .bread_fr {
+      width: 1200px;
+      margin: 0 auto;
+    }
+
+    .page {
+      clear: both;
+      width: 100%;
+      min-height: 60vh;
+    }
+
+    .page:after {
+      content: "";
+      display: block;
+      clear: both;
+    }
+
+    .page_wrap {
+      width: 1200px;
+      margin: 0 auto;
+    }
+
+    .page_title {
+      padding-top: 1em;
+      text-align: center;
+    }
+
+    .home {
+      color: #333;
+    }
+
+    .frm {
+      border: 2px solid #333;
+      padding: 24px;
+      width: 580px;
+      margin: 50px auto;
+    }
+
+    .frm_tb {
+      display: table;
+      margin: 40px auto;
+    }
+
+    .frm_tb tr {
+      display: table-row;
+    }
+
+    .frm_tb td,
+    .frm_tb th {
+      display: table-cell;
+    }
+
+    .frm_tb th {
+      width: 200px;
+      height: 48px;
+    }
+
+    .frm_tb td {
+      width: 300px;
+      height: 48px;
+    }
+
+    .in_dt {
+      background-color: #fff;
+      height: 32px;
+      line-height: 32px;
+      width: 280px;
+      color: #f36;
+      font-size: 16px;
+      text-indent: 0.5em;
+    }
+
+    .in_btn {
+      display: block;
+      background-color: #333;
+      min-width: 120px;
+      height: 32px;
+      line-height: 32px;
+      border-radius: 20px;
+      float: left;
+      margin-left: 365px;
+      cursor: pointer;
+    }
+
+    .in_btn:hover {
+      background-color: deepskyblue;
+    }
+
+    /* ul > li 를 테이블 처럼 출력 */
+    .frm_tb {
+      display: table;
+      margin-left: -5px;
+    }
+
+    .frm_tb li {
+      display: table-row;
+    }
+
+    .frm_tb .td,
+    .frm_tb .th,
+    .frm_tb .td2 {
+      display: table-cell;
+    }
+
+    .frm_tb .th {
+      width: 200px;
+    }
+
+    .frm_tb .td {
+      width: 200px;
+    }
+
+    .frm_tb .td2 {
+      width: 400px;
     }
   </style>
-  <!-- <script>
-    //로그인 실패 스크립트.
-    $(document).ready(function(){
-         massage1 = $(".massage").text();
-      $(".login").click(function(){
-          if(massage1 != null){
-          alert(massage1);
-        } else {
-          return null;
-        }
-      });
-    });
-  </script> -->
 </head>
-<span class="massage" th:text="${session.massage}" style="display: none;"></span>
-<body class="hold-transition sidebar-mini layout-fixed">
-  <div class="wrapper">
-    <th:block th:include="common/header"></th:block>
-    <section>
-      <div id="login">
-        <div class="container">
-          <div id="login-row" class="row justify-content-center align-items-center">
-            <div id="login-column" class="col-md-6">
-              <div id="login-box" class="col-md-12">
-                <form id="login-form" class="form" action="/custom/login.do" method="post">
-                  <h3 class="text-center text-muted">로그인</h3>
-                  <div class="form-group">
-                    <label for="cusId" class="text-muted">아이디:</label><br>
-                    <input type="text" name="cusId" id="cusId" class="form-control">
-                  </div>
-                  <div class="form-group">
-                    <label for="cusPw" class="text-muted">비밀번호:</label><br>
-                    <input type="password" name="cusPw" id="cusPw" class="form-control">
-                  </div>
-                  <div class="form-group">
-                    <label for="saveId" class="text-muted"><span>아이디 기억하기</span>
-                      <span><input class="save_id" name="checkId" id="saveId" type="checkbox"></span></label><br>
-                    <input type="submit" name="submit" class="btn btn-primary btn-md login" value="로그인">
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
+
+<body>
+  <th:block th:include="common/header"></th:block>
+  <div class="wrap">
+    <div class="content">
+      <figure class="vs">
+        <img src="/img/product_main.png" alt="비주얼">
+      </figure>
+      <div class="bread">
+        <div class="bread_fr">
+          <a href="/" class="home">HOME</a> &gt;
+          <span class="sel">로그인</span>
         </div>
       </div>
-    </section>
-    <th:block th:include="common/footer"></th:block>
+      <section class="page">
+        <div class="page_wrap">
+          <h2 class="page_title">로그인</h2>
+          <div class="form_fr">
+            <form name="frm1" action="/custom/login.do" method="post" id="loginForm" class="frm">
+              <table class="frm_tb">
+                <tbody>
+                  <tr>
+                    <th><label for="id">아이디</label></th>
+                    <td>
+                      <input type="text" id="id" name="id" class="in_dt" required autofocus>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th><label for="id">비밀번호</label></th>
+                    <td>
+                      <input type="password" id="pw" name="pw" class="in_dt" required>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td colspan="2">
+                      <button type="submit" class="in_btn">로그인</button>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </form>
+          </div>
+        </div>
+      </section>
+    </div>
   </div>
+  <th:block th:include="common/footer"></th:block>
 </body>
 </html>
