--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
 <html lang="ko" xmlns="http://www.w3.org/1999/xhtml"
  xmlns:th="http://www.thymeleaf.org"
  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-</html>
 <head>
 <style>
 .hd { width: 100%; height:122px; position:absolute; top: 0; left: 0; z-index:91; }
@@ -12,7 +10,6 @@
 .tnb { float:right; margin: 30px 0px; }
 .tnb a { padding: 1.5em; font-size:12px; color: white; }
 .tnb a:hover { color:red; font-weight:700; text-decoration: underline; text-decoration-style:dotted; }
-
 
 .gnb { clear:both; width: 100%; }
 /* clear-fix 처리 */
@@ -35,7 +32,7 @@
 </head>
 <header class="hd">
   <div class="hd_wrap">
-      <a href="/" class="logo"><img src="/img/lg_logo2.png" alt=""></a>
+      <a href="/" class="logo"><img src="/img/lg_logo2.png" alt="header_logo"></a>
       <nav th:if="${#strings.isEmpty(session.sid)}" class="tnb">
         <a th:href="@{/custom/loginForm.do}" >로그인</a>
         <a th:href="@{/custom/agree.do }">회원가입</a>
@@ -44,15 +41,11 @@
       <nav th:if="${not #strings.isEmpty(session.sid)}" class="tnb">
           <span th:text="${session.sid}+'님 환영합니다.'" class="sid"></span>
           <a th:href="@{/custom/logout.do}">로그아웃</a>
+          <a th:href="@{/custom/mypage.do}">마이페이지</a>
           <a th:href="@{/custom/customs }">회원기능</a>
+          <th:block th:if="${session.sid == 'admin'}"><a th:href="@{/custom/admins }">관리자 기능</a></th:block>
           <a th:href="@{/sub/sitemap.do}">사이트맵</a>
       </nav>
-      <nav th:if="${session.sid=='admin'}" class="tnb">
-        <span th:text="${session.sid}+'님 환영합니다.'" class="sid"></span>
-        <a th:href="@{/custom/logout.do}">로그아웃</a>
-        <a th:href="@{/custom/admins }">관리자 기능</a>
-        <a th:href="@{/sub/sitemap.do}">사이트맵</a>
-    </nav>
       <nav class="gnb">
           <ul style="opacity: 0.85;">
               <li class="item1">
